--- a/stellar-cms/src/App.css
+++ b/stellar-cms/src/App.css
@@ -5,6 +5,14 @@
   text-align: center;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
+}
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -43,6 +51,21 @@
 
 .NasaMain{
   background-image: linear-gradient(180deg, rgb(139, 105, 105), rgb(195, 195, 120));
+  margin-top: 60px;
+  padding: 20px;
+}
+
+.imageNasa{
+  max-width: 50%;
+}
+
+.fullscreen-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Pastikan gambar latar belakang berada di belakang elemen lain */
 }
 
 
@@ -78,3 +101,147 @@
   background-color: #e1e1e1;
 }
 
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; 
+  background-color: rgb(0, 0, 0);
+}
+
+.isiNasa {
+  max-width: 600px; 
+  margin: 0 auto;
+  padding: 10px; 
+  background-color: rgba(255, 255, 255, 0.8); 
+  border-radius: 10px;
+}
+
+.isiNasa h1 {
+  font-size: 24px; 
+  color: #333; 
+  margin-bottom: 10px; 
+}
+
+.isiNasa p {
+  font-size: 16px; 
+  color: #666; 
+  margin-bottom: 10px; 
+  line-height: 1.5; 
+}
+
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+
+.navbar ul {
+  list-style-type: none; /* menghilangkan bullet point dari daftar */
+  margin: 15px;
+}
+
+
+.navbar ul li a:hover {
+  color: #ffcc00; /* ubah warna teks saat mouse diarahkan ke tautan */
+}
+
+.Link{
+  color: white;
+}
+.Link:hover{
+  color: red;
+}
+
+
+.containerHome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%; /* Tambahkan ini untuk memastikan elemen melebar untuk mengisi seluruh lebar layar */
+  background-image: url('https://cdn.wallpapersafari.com/56/3/JLnKw5.jpg'); 
+  background-size: cover;
+  background-position: center; 
+  background-repeat: no-repeat; 
+}
+
+
+.containerHome ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.containerHome ul li {
+  margin-bottom: 10px;
+}
+
+.containerHome ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.containerHome ul li a:hover {
+  background-color: #f0f0f0;
+}
+
+/* Styling untuk konten utama */
+.IssMain {
+  margin-top: 60px; /* Untuk menjaga agar konten utama tidak tertutup oleh navbar */
+  padding: 20px;
+}
+
+.table-container {
+  overflow-x: auto; /* Memungkinkan scrolling horizontal jika konten melebihi lebar */
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table th, .table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  color: #333;
+}
+
+/* Styling untuk link "Show Position" */
+.position {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.position:hover {
+  color: navy;
+}
+
+.button {
+  background-color: #007bff; /* Warna latar belakang tombol */
+  color: #fff; /* Warna teks tombol */
+  padding: 10px 20px; /* Padding untuk memberikan ruang di dalam tombol */
+  border: none; /* Hapus border default */
+  border-radius: 5px; /* Tambahkan sudut lengkung untuk membuatnya terlihat seperti tombol */
+  cursor: pointer; /* Ubah kursor saat mengarahkan ke tombol */
+  font-size: 16px; /* Ukuran font teks tombol */
+}
+
+.button:hover {
+  background-color: #0056b3; /* Warna latar belakang saat tombol dihover */
+}
