--- a/stellar-cms/src/App.css
+++ b/stellar-cms/src/App.css
@@ -51,7 +51,7 @@ body {
 
 .NasaMain{
   background-image: linear-gradient(180deg, rgb(139, 105, 105), rgb(195, 195, 120));
-  margin-top: 60px;
+  margin-top: 30px;
   padding: 20px;
 }
 
@@ -65,7 +65,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Pastikan gambar latar belakang berada di belakang elemen lain */
+  z-index: -1;
 }
 
 
@@ -140,13 +140,13 @@ body {
 }
 
 .navbar ul {
-  list-style-type: none; /* menghilangkan bullet point dari daftar */
+  list-style-type: none; 
   margin: 15px;
 }
 
 
 .navbar ul li a:hover {
-  color: #ffcc00; /* ubah warna teks saat mouse diarahkan ke tautan */
+  color: #ffcc00; 
 }
 
 .Link{
@@ -163,7 +163,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100%; /* Tambahkan ini untuk memastikan elemen melebar untuk mengisi seluruh lebar layar */
+  width: 100%; 
   background-image: url('https://cdn.wallpapersafari.com/56/3/JLnKw5.jpg'); 
   background-size: cover;
   background-position: center; 
@@ -195,14 +195,14 @@ body {
   background-color: #f0f0f0;
 }
 
-/* Styling untuk konten utama */
+
 .IssMain {
-  margin-top: 60px; /* Untuk menjaga agar konten utama tidak tertutup oleh navbar */
+  margin-top: 60px; 
   padding: 20px;
 }
 
 .table-container {
-  overflow-x: auto; /* Memungkinkan scrolling horizontal jika konten melebihi lebar */
+  overflow-x: auto;  
 }
 
 .table {
@@ -233,15 +233,74 @@ body {
 }
 
 .button {
-  background-color: #007bff; /* Warna latar belakang tombol */
-  color: #fff; /* Warna teks tombol */
-  padding: 10px 20px; /* Padding untuk memberikan ruang di dalam tombol */
-  border: none; /* Hapus border default */
-  border-radius: 5px; /* Tambahkan sudut lengkung untuk membuatnya terlihat seperti tombol */
-  cursor: pointer; /* Ubah kursor saat mengarahkan ke tombol */
-  font-size: 16px; /* Ukuran font teks tombol */
+  background-color: #007bff; 
+  color: #fff; 
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px; 
+  cursor: pointer;
+  font-size: 16px; 
 }
 
 .button:hover {
-  background-color: #0056b3; /* Warna latar belakang saat tombol dihover */
+  background-color: #0056b3; 
 }
+
+.containerAstro {
+  max-width: 800px; 
+  margin: 0 auto; 
+  padding: 20px; 
+}
+
+.containerAstro h1 {
+  font-size: 24px; 
+  margin-bottom: 20px; 
+}
+
+.containerAstro p {
+  font-size: 16px; 
+  margin-bottom: 10px; 
+}
+
+.data-table {
+  width: 100%; 
+  border-collapse: collapse; 
+}
+
+.data-table th, .data-table td {
+  padding: 8px; 
+  text-align: left; 
+  border-bottom: 1px solid #ddd; 
+}
+
+.data-table th {
+  background-color: #f2f2f2; 
+}
+
+.data-table tbody tr:nth-child(even) {
+  background-color: #f2f2f2; 
+}
+
+.data-table tbody tr:hover {
+  background-color: #f0f0f0;
+}
+
+.home-background {
+  background-image: url('../pexels-felix-mittermeier-956981.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-background h1 {
+  text-align: center; 
+  color: white;
+}
+
+
