--- a/stellar-cms/src/App.css
+++ b/stellar-cms/src/App.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 
 
@@ -56,7 +56,7 @@ body {
 }
 
 .imageNasa{
-  max-width: 50%;
+  width: 300px;
 }
 
 .fullscreen-bg {
@@ -111,7 +111,7 @@ body {
 }
 
 .isiNasa {
-  max-width: 600px; 
+  max-width: 1000px; 
   margin: 0 auto;
   padding: 10px; 
   background-color: rgba(255, 255, 255, 0.8); 
